Telas com o básico:  (home) Tela inicial: Dois botões para escolher criar novo qr ou escanear um já existente;  (new) Gerar QRCode: Textarea para entrar com o texto a ser compartilhado;  (scan) Escanear QRCode: Tela para informar o id e um botão para abrir a câmera (ainda não funcionando);  (info) Informações do QR: Tela que mostra o QR Code + ID do QR + Texto;

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,5 +2,7 @@
   "name": "InstantShare",
   "app_id": "",
   "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {
+    "cordova": {}
+  }
 }
