--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "InstantShare",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -22,13 +22,16 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/barcode-scanner": "^4.7.0",
+    "@ionic-native/camera": "^4.7.0",
     "@ionic-native/clipboard": "^4.7.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "^2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
     "cordova-clipboard": "^1.2.1",
+    "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -46,7 +49,7 @@
     "@ionic/app-scripts": "3.1.10",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project",
+  "description": "Instant Share App",
   "cordova": {
     "plugins": {
       "cordova-clipboard": {},
@@ -58,10 +61,12 @@
       "phonegap-plugin-barcodescanner": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
